--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-       <div id="rainbow">
-
-       </div>
+       <div id="rainbow"></div>
      
-       <div id="people">
+       <div id="people"></div>
 
-       </div>
-
+        <div id="dino-div"></div>
 
 
         <script src="main.js"></script>
-        <script src="loops.js"></script>
+        <!-- <script src="loops.js"></script> -->
+        <script src="dinos.js"></script>
     </body>
 </html>
